# rsscrab

./: Cargo.toml  README.md
src/: error.rs  io.rs  lib.rs  main.rs  rss_gen.rs  site_type.rs
tests/: rss_gen.rs
