[package]
name = "rsscrab"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.23.1"
regex = "1.10"

[lib]
name = "rsscrab"
path = "src/lib.rs"
